--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -1,19 +1,41 @@
-.sticky-top {
-    margin-bottom: 0.5em;
+html {
+  position: relative;
+  min-height: 100%;
 }
+/*
+if you decide on a fixed-bottom class for the footer,
+add a margin to the body that matches the height of the footer
 
-.navbar-dark .navbar-nav .nav-link {
-    color: rgb(255, 255, 255, 1);
+body { 
+    margin-bottom: 50px;
 }
+*/
 
-.jumbotron {
-    background-color: rgb(255, 255, 255, 1)
+footer {
+  height: 50px;
 }
 
 .cropped-img {
-    height:100px;
-    width:100px;
-    border-radius: 50%;
-    background-position: center center;
-    background-repeat: no-repeat;
+  height: 150px;
+  width: 150px;
+  border-radius: 50%;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.jumbotron {
+  background-color: rgb(255, 255, 255, 1);
+}
+
+.sticky-top {
+  margin-bottom: 0.5em;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+  color: rgb(255, 255, 255, 1);
+}
+
+.navbar-dark .navbar-toggler {
+  color: rgb(255, 255, 255, 1);
+  border-color: rgb(255, 255, 255, 1);
 }
