--- a/theme/templates/footer.html
+++ b/theme/templates/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer bg-info">
-    <div class="container">
-        <p class="text-white">Place sticky footer content here.</p>
-    </div>
+<footer class="footer bg-info text-white text-center">
+  
+    <h2></h2>
+    
 </footer>
