--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -21,7 +21,7 @@ content %}
     <div class="col-md-12 jumbotron text-center">
       <h2>About Me</h2>
     </div>
-    <div class="col-md-5">
+    <div class="col-md-5 d-flex flex-column justify-content-around">
       <p>{{ ABOUT_ME }}</p>
     </div>
     <div class="col-md-6 offset-md-1 d-flex flex-column justify-content-around">
@@ -44,17 +44,25 @@ content %}
       <h2 class="text-center">Interests</h2>
     </div>
     <div class="col-md-5">
-      <p>{{ ABOUT_ME }}</p>
+      <div class="align-self-center">
+        {%for i in INTERESTS %}
+        <ul>
+          <li>
+            <p><strong>{{ i[0]}}</strong>{{ i[1] }}</p>
+          </li>
+        </ul>
+        {%endfor%}
+      </div>
     </div>
     <div class="col-md-6 offset-md-1 d-flex flex-column justify-content-around">
-      <h3 class="text-center">Projects</h3>
+      <h3 class="text-center">Open Source Projects</h3>
 
       <div class="align-self-center">
         {%for p in PROJECTS %}
 
         <ul class="">
           <li>
-            {{ p }}
+            <a href="{{ p[0] }}">{{ p[1] }}</a>
           </li>
         </ul>
         {%endfor%}
@@ -66,7 +74,7 @@ content %}
 
         <ul class="">
           <li>
-            {{ p }}
+            <a href="{{ p[0] }}">{{ p[1] }}</a>
           </li>
         </ul>
         {%endfor%}
@@ -81,14 +89,14 @@ content %}
       <div class="col-md-6 ">
         <form action="{{ FORMSPREELINK }}" method="POST">
           <div class="form-group" >
-          <input class="form-control" type="text" name="name" placeholder="Name">
+          <input class="form-control" type="text" name="name" placeholder="Name" required>
           </div>
           <div class="form-group" >
-            <input class="form-control" type="email" id="mail" name="_replyto" placeholder="Email">
+            <input class="form-control" type="email" id="mail" name="_replyto" placeholder="Email" required>
             </div>
          
           <div class="form-group">
-                <textarea class="form-control" rows="4" placeholder="Message"></textarea>
+                <textarea class="form-control" rows="4" placeholder="Message" required></textarea>
               </div>
             <button type="submit" class="btn btn-success float-right">Send</button>
           </form>
