--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -18,9 +18,11 @@
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="/#Projects">Projects</a>
       </li>
+      <!-- Blog nav item - uncomment when ready
       <li class="nav-item">
         <a class="nav-link" href="/blog">Blog</a>
       </li>
+      -->
       <li class="nav-item">
         <a class="nav-link js-scroll-trigger" href="/#ContactMe">Contact</a>
       </li>
